--- a/HTML-CSS-Popup/style.css
+++ b/HTML-CSS-Popup/style.css
@@ -1,160 +1,213 @@
-/*Обнуление*/
 * {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
-/* Основные стили */
-html,body{
-	height: 100%;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	font-size: 16px;
+
+html,
+body {
+  margin: 0;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 16px;
+  background-color: #ffe6cc;
 }
+
 .wraper {
-	max-width: 100%;
-	margin: 0 auto;
-	display: grid;
-	grid-template-rows: auto 1fr auto;
-	min-height: 100vh;
-	background-color: #ffe6cc;
+  max-width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  min-height: 100vh; 
 }
+
 .header {
-	display: flex;
-	justify-content: end;
-}
-.container {	
-}
-.header__menu {
+  display: flex;
+  max-width: 100%;
+  justify-content: end;
 }
 
 .header__lists {
-	display: flex;
-	list-style: none;
+  display: flex;
+  list-style: none;
 }
+
+.container {
+  max-width: 1280px;
+  width: 100%;
+  justify-content: end;
+  height: 100%;
+}
+
+.header__menu {
+  max-width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin: 0 auto;
+}
+
+.header__lists {
+  display: flex;
+  list-style: none;
+}
+
 .header__list {
-	margin: 10px;
-	position: relative;
-	vertical-align: middle;
-	align-items: center;
-	display: flex;
+  position: relative;
+  vertical-align: middle;
+  align-items: center;
+  display: flex;
 }
+
 .header__link {
-	display: block;
-	padding: 10px;
-	font-size: 20px;
-	color: #000;
-	border-radius: 5px;
-	text-decoration: none;
+  display: block;
+  padding: 10px;
+  font-size: 20px;
+  color: #000;
+  border-radius: 5px;
+  text-decoration: none;
+  margin: 10px;
+  border: 1px solid transparent;
 }
+
 .header__link:focus,
 .header__link:focus-within,
 .header__link:hover {
-	border: 1px solid #7a7a52;
-	border-radius: 5px;
+  border: 1px solid #7a7a52;
+  border-radius: 5px;
 }
+
 .header__input {
-	appearance: none;
-	position: absolute;
+  appearance: none;
+  position: absolute;
 }
+
 .header__logo-menu,
 .sub__check-label {
-	display: block;
-	cursor: pointer;
+  display: block;
+  cursor: pointer;
 }
+
 .popup {
-	position: absolute;
-	display: none;
-	top: 80px;
-	right: -150px;
-	width: 380px;
-	height: 310px;
-	overflow: scroll;
-	overflow-x: hidden;
-	border: 1px solid #7a7a52;
-	border-radius: 5px;
-	padding: 10px;
-	background-color: #ffffe6;
-	
+  position: absolute;
+  display: none;
+  top: 80px;
+  right: -150px;
+  max-width: 380px;
+  max-height: 310px;
+  overflow: auto;
+  overflow-x: hidden;
+  border: 1px solid #7a7a52;
+  border-radius: 5px;
+  padding: 10px 10px 5px 10px;
+  background-color: #ffffe6;
+  object-fit: cover;
 }
-.header__input:checked~.popup {
-	display: block;
+
+.header__input:checked ~ .popup {
+  display: block;
 }
+
 .header__lists-popup {
-	display: grid;
-	grid-template-columns: repeat(3, 100px);
-	grid-template-rows: repeat(1, 1fr);
-	gap: 1em;
-	padding: 5px;
-	align-items: end;
-	
+  display: grid;
+  grid-template-columns: repeat(3, 110px);
+  grid-template-rows: auto;
+  gap: 15px;
+  padding: 5px;
+  align-items: end;
+  list-style-type: none;
 }
+
 .header__input-label {
-	position: relative;
+  position: relative;
 }
+
+.popup__list {
+  padding: 5px;
+  width: 110px;
+  height: 60px;
+  text-align: center;
+  font-size: 16px;
+}
+
 .popup-img {
-	display: block;
-	max-width: 90%;
-	max-height: 90%;
-	margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+  margin: 0 auto;
 }
+
 .popup__link {
-	padding: 5px;
-	width: 100px;
-	height: 60px;
-	text-align: center; 
-	text-decoration: none;
-	font-size: 16px;
-	color: #000;
+  display: block;
+  text-decoration: none;
+  color: #000;
+  border: 1px solid transparent;
 }
+
 .popup__link:focus,
 .popup__link:hover {
-	border: 1px solid #7a7a52;
-	border-radius: 5px;
+  border: 1px solid #7a7a52;
+  border-radius: 5px;
 }
-.sub__check-label { 
-	display: block;
-	padding: 0;
-	margin: 30px 0px 30px 0px;
-	font-size: 20px;
-	text-align: center;
-	text-transform: uppercase;
-	background-color: #d6d6c2;
-	border: 1px solid transparent;
+
+.sub__check-label {
+  display: block;
+  padding: 0;
+  margin: 30px 0px 0px 0px;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #d6d6c2;
 }
-.sub__check-label:focus,
-.sub__check-label:focus-within,
-.sub__check-label:hover {
-	border: 1px solid #7a7a52;
-}
+
 .sub__check-input {
-	appearance: none;
-	position: absolute;
-	
+  appearance: none;
+  position: absolute;
+  margin-top: 29px;
+  border: 1px solid transparent;
+  width: 95%;
+  height: 25px;
 }
-.sub__check-input:checked~.sub__lists-popup {
-	display: block;
-	display: grid;
+
+.sub__check-input:focus,
+.sub__check-input:focus-within,
+.sub__check-input:hover {
+  border: 1px solid #7a7a52;
 }
-.sub__check-input:checked~.sub__check-label {
-	display: none;
+.sub__check-input:checked ~ .sub__lists-popup {
+  display: block;
 }
+
+.sub__check-input:checked ~ .sub__check-label {
+  display: none;
+}
+
+.sub__check-input:checked {
+  display: none;
+}
+
 .sub__lists-popup {
-	display: grid;
-	gap: 1em;
-	align-items: end;
-	display: none;
-	grid-template-columns: repeat(3, 100px);
-	grid-template-rows: repeat(1, 1fr);
-	padding-top: 30px;
-	margin-top: 30px;
-	border-top: 1px solid #7a7a52;
+  display: none;
+  padding: 5px;
 }
+
+.sub__lists {
+  display: grid;
+  gap: 15px;
+  align-items: end;
+  list-style-type: none;
+  grid-template-columns: repeat(3, 110px);
+  grid-template-rows: auto;
+  padding-top: 30px;
+  margin-top: 30px;
+  border-top: 1px solid #7a7a52;
+}
+
 .sub__popup-img {
-	display: block;
-	max-width: 90%;
-	max-height: 90%;
-	margin: 0px auto;
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+  margin: 0px auto;
 }
+
 .notification,
 .avatar {
-	display: block;
+  display: block;
 }
